# agent

./: .env copy  .gitignore  README.md  makefile  pyproject.toml
core/chunker/: __init__.py  chunker.md  lang.py  length.py  markdown.py  recursive.py  semantic.py  utils.py
core/chunker/chonk/: agentic.py  code.py  late.py
core/driver/neo4j/: driver.py
core/llm/: client.py  mmclient.py
core/parser/: evaluate.py  parser.py
script/: merge.py  table.py
tests/: test_chuner.py  test_chunker.py  test_llm_client.py  test_neo4j_driver.py
tests/test_chunker/: length_based.py  test_agentic.py  test_base.py  test_code.py  test_late.py  test_length.py  test_markdown.py  test_recursive.py  test_semantic.py
